--- a/src/components/style.css
+++ b/src/components/style.css
@@ -79,3 +79,121 @@
     margin-left: 24px;
     color: white
 }
+
+.filter {
+    background: white;
+    box-sizing: border-box;
+    height: 56px;
+    padding: 8px;
+    border: 1px solid #efefef;
+    border-radius: 8px;
+    box-shadow: 0 0 10px -8px grey;
+    display: flex;
+    align-items: center;
+    margin: 0 0 16px 0;
+}
+
+.filter > span {
+    margin: 0 16px;
+    color: #535353;
+    font-style: italic;
+    cursor: pointer;
+}
+.filter > span:first-child {
+    font-weight: bold;
+}
+.filter > span:hover {
+    color: #272a53;
+    text-shadow: 0 0 1px #5a5ab4;
+    cursor: pointer;
+}
+.filter > span:first-child:hover {
+    color: #535353;
+    text-shadow: none;
+    cursor: default;
+}
+
+.offer {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    box-shadow: 0 0 10px -8px grey;
+    box-sizing: border-box;
+    border: 1px solid #efefef;
+    border-radius: 8px;
+    transition: 300ms;
+}
+
+.offer > .wrapper {
+    margin: 0;
+    width: 100%;
+    height: calc(100% - 80px);
+    box-shadow: 0 -2px 4px -2px rgba(17,60,143,0.05),0 5px 20px -5px rgba(17,60,143,0.25);
+    background: #f8fdf9;
+    box-sizing: border-box;
+    padding: 4px 24px;
+}
+
+.offer > .wrapper > div {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    margin: 12px 0;
+}
+
+.offer > .wrapper > div > span:first-child {
+    font-style: italic;
+    color: #535353;
+    font-size: 14px;
+    margin: 0.5px 0;
+}
+
+.offer > .wrapper > div:first-child > span:last-child {
+    font-family: "Ubuntu", sans-serif;
+    color: #535353;
+    font-size: 18px;
+    font-style: normal;
+}
+
+.offer > .wrapper > div:nth-child(2) > span:last-child {
+    font-family: "Ubuntu", sans-serif;
+    color: rgba(26, 171, 72, 1);
+    font-size: 18px;
+    font-style: normal;
+}
+
+.offer > .wrapper > div > span:last-child {
+    color: #535353;
+    font-style: italic;
+    font-size: 14px;
+    margin: 0.5px 0;
+}
+
+.offer .logotype {
+    margin: 0;
+    width: 100%;
+    height: 80px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 24px 5px;
+    background-color: rgb(249, 249, 249);
+    border-bottom: 1px solid rgb(228, 228, 228);
+}
+
+.wrapper > .button {
+    width: 100%;
+    height: 32px;
+    background: rgba(26, 171, 72, 1);
+    box-sizing: border-box;
+    margin: 24px auto 0 auto;
+    font-style: italic;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    box-shadow: 0 -2px 4px -2px rgba(17,60,143,0.05),0 5px 20px -5px rgba(17,60,143,0.25);
+    cursor: pointer;
+    text-decoration: none;
+}
