[UR-22] Added reviews list component

--- a/src/Reviews/style.css
+++ b/src/Reviews/style.css
@@ -4,6 +4,7 @@
     grid-template-columns: 1fr 1fr;
     padding: 0 var(--offset);
     height: 468px;
+    column-gap: 24px;
 }
 .reviews > .review_form {
     width: 100%;
