--- a/src/components/style.css
+++ b/src/components/style.css
@@ -68,16 +68,17 @@
 
 .ads {
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 45% 55%;
 }
 
 .ads > img {
-    width: 100%;
+    max-height: 80px;
     border-right: 1px solid white;
 }
 .ads > p {
-    margin-left: 24px;
-    color: white
+    color: white;
+    margin-left: 0;
+    margin-top: 24px;
 }
 
 .filter {
@@ -260,4 +261,5 @@
 }
 .reviewsList > .list {
     padding: 0 30px;
+    border-top: 1px solid #efefef;
 }
