--- a/src/Calculator/style.css
+++ b/src/Calculator/style.css
@@ -30,3 +30,25 @@
         margin: 24px 0;
     }
 }
+@media screen and (max-width: 900px) {
+    .calculator {
+        box-sizing: border-box;
+        background: rgba(26, 171, 72, 1);
+        margin-top: 58px;
+        padding: 16px calc(var(--offset)/9) 8px calc(var(--offset)/9);
+    }
+
+    .calculator > h1 {
+        margin: 0;
+        font-family: "Ubuntu", sans-serif;
+        color: white;
+        font-size: 25px;
+    }
+
+    .calculator > p {
+        width: 100%;
+        color: white;
+        margin: 8px 0;
+        font-size: 14px;
+    }
+}
