--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -50,13 +50,14 @@
     }
 
     header > .changeLang {
+        position: absolute;
+        right: 6px;
+        top: 8px;
         display: inline-block;
-        float: right;
-        height: 50px;
-        margin-right: 16px;
+        height: 40px;
         cursor: pointer;
         font-family: "Quicksand", sans-serif;
-        font-size: 32px;
+        font-size: 24px;
         color: #828282;
         -webkit-touch-callout: none; /* iOS Safari */
         -webkit-user-select: none; /* Safari */
@@ -70,11 +71,12 @@
 
     header > .changeLang > .selected {
         color: #1AAB48;
-        font-size: 34px;
+        font-size: 26px;
     }
 
     header img {
         height: 42px;
+        width: 180px;
         margin: 8px;
     }
 
