--- a/src/components/style.css
+++ b/src/components/style.css
@@ -23,6 +23,7 @@
         border-radius: 10px;
         float: left;
         border: 1px solid #efefef;
+        background: white;
     }
 
     .inputGroup:hover {
@@ -40,6 +41,7 @@
         z-index: 5;
         box-sizing: border-box;
         overflow: hidden;
+        border-radius: 10px;
     }
 
     .input:last-child {
@@ -273,6 +275,307 @@
 
     .reviewsList > .list {
         padding: 0 30px;
+        border-top: 1px solid #efefef;
+        overflow-y: scroll;
+        height: 400px;
+    }
+
+    .pageLoader {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #f5f5f5;
+        transition: 500ms;
+    }
+
+    .pageLoader > .loader {
+        width: 256px;
+        height: 23px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .button {
+        float: left;
+        border-radius: 8px;
+        font-family: "OpenSans", sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 16px 0;
+        cursor: pointer;
+        font-size: 18px;
+        font-style: italic;
+        z-index: 3;
+    }
+
+    .button:hover {
+        box-shadow: 0 0 5px -2px black;
+    }
+
+    .inputGroup {
+        display: grid;
+        overflow: hidden;
+        border-radius: 10px;
+        float: left;
+        border: 1px solid #efefef;
+        background: white;
+    }
+
+    .inputGroup:hover {
+        box-shadow: 0 0 5px -2px black;
+        overflow: hidden;
+    }
+
+    .input {
+        width: 100%;
+        height: 100%;
+        background: white;
+        position: relative;
+        border-radius: 10px 10px 0 0;
+        cursor: pointer;
+        border-bottom: 1px solid #dfdfdf;
+        z-index: 5;
+        box-sizing: border-box;
+        overflow: hidden;
+    }
+
+    .input:last-child {
+        border-bottom: none;
+        border-radius: 10px;
+    }
+
+    .input > label {
+        position: absolute;
+        left: 16px;
+        bottom: 27%;
+        z-index: 6;
+        font-size: 16px;
+        transition: 300ms;
+        color: gray;
+        cursor: pointer;
+    }
+
+    .input > input {
+        width: 100%;
+        font-size: 16px;
+        transition: 400ms;
+        opacity: 0;
+        padding: 16px;
+        height: 60%;
+        box-sizing: border-box;
+        position: absolute;
+        bottom: 0;
+        border: 0;
+        -webkit-appearance: none;
+        border-radius: 0;
+        cursor: pointer;
+    }
+
+    .ads {
+        display: block;
+        /*float: left;*/
+    }
+
+    .ads > img {
+        max-height: 80px;
+        margin: -6px 0 0 24px;
+    }
+
+    .ads > p {
+        display: none;
+    }
+
+    .filter {
+        display: none;
+    }
+
+    .filter > span {
+        margin: 0 16px;
+        color: #535353;
+        font-style: italic;
+        cursor: pointer;
+    }
+
+    .filter > span:first-child {
+        font-weight: bold;
+    }
+
+    .filter > span:hover {
+        color: #272a53;
+        text-shadow: 0 0 1px #5a5ab4;
+        cursor: pointer;
+    }
+
+    .filter > span:first-child:hover {
+        color: #535353;
+        text-shadow: none;
+        cursor: default;
+    }
+
+    .offer {
+        position: relative;
+        width: 100%;
+        height: 210px;
+        overflow: hidden;
+        box-shadow: 0 0 10px -8px grey;
+        box-sizing: border-box;
+        border: 1px solid #efefef;
+        border-radius: 8px;
+        transition: 300ms;
+    }
+
+    .offer > .wrapper {
+        margin: 0;
+        width: 100%;
+        height: calc(100% - 40px);
+        box-shadow: 0 -2px 4px -2px rgba(17, 60, 143, 0.05), 0 5px 20px -5px rgba(17, 60, 143, 0.25);
+        background: #f8fdf9;
+        box-sizing: border-box;
+        padding: 4px 12px;
+    }
+
+    .offer > .wrapper > div {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 40% 60%;
+        margin: 6px 0;
+    }
+
+    .offer > .wrapper > div > span:first-child {
+        font-style: italic;
+        color: #535353;
+        font-size: 12px;
+        margin: 0.5px 0;
+    }
+
+    .offer > .wrapper > div:first-child > span:last-child {
+        font-family: "Ubuntu", sans-serif;
+        color: #535353;
+        font-size: 15px;
+        font-style: normal;
+    }
+
+    .offer > .wrapper > div:nth-child(2) > span:last-child {
+        font-family: "Ubuntu", sans-serif;
+        color: rgba(26, 171, 72, 1);
+        font-size: 14px;
+        font-style: normal;
+    }
+
+    .offer > .wrapper > div > span:last-child {
+        color: #535353;
+        font-style: italic;
+        font-size: 13px;
+        margin: 0.5px 0;
+    }
+
+    .offer .logotype {
+        margin: 0;
+        width: 100%;
+        height: 50px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 24px 5px;
+        background-color: rgb(249, 249, 249);
+        border-bottom: 1px solid rgb(228, 228, 228);
+    }
+
+    .wrapper > .button {
+        width: 100%;
+        height: 28px;
+        background: rgba(26, 171, 72, 1);
+        box-sizing: border-box;
+        margin: 0 auto;
+        font-size: 13px;
+        font-style: italic;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+        box-shadow: 0 -2px 4px -2px rgba(17, 60, 143, 0.05), 0 5px 20px -5px rgba(17, 60, 143, 0.25);
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .reviewsList {
+        background: white;
+        box-shadow: 0 0 10px -8px grey;
+        box-sizing: border-box;
+        border: 1px solid #efefef;
+        border-radius: 8px;
+        z-index: 5;
+        height: 468px;
+    }
+
+    .reviewsList > .list > .review {
+        font-family: "Ubuntu", sans-serif;
+        color: #828282;
+        font-size: 12px;
+        margin: 8px 0 0 0;
+    }
+    .reviewsList > .list > .review > div > span:first-child{
+        font-size: 14px;
+    }
+
+    .reviewsList > .list > .review > div > span > img {
+        width: 20px;
+        position: relative;
+        top: -2px;
+    }
+
+    .reviewsList > .list > .review > h6 {
+        font-size: 12px;
+        margin: 0;
+    }
+
+    .reviewsList > .list > .review > div > span:last-child {
+        position: relative;
+        right: 10px;
+        color: #828282;
+        margin-left: 2px;
+    }
+
+    .reviewsList > .list > .review > p {
+        color: #535353;
+        margin: 10px 0 0 0;
+        padding: 0 0 15px 0;
+        border-bottom: 1px solid #efefef;
+        font-family: "OpenSans", sans-serif;
+        font-size: 13px;
+    }
+
+    .reviewsList > .list > .moreButton {
+        width: 150px;
+        text-align: center;
+        margin: 16px auto;
+        color: #3b43c0;
+        cursor: pointer;
+    }
+
+    .reviewsList > .list > .review > div > span {
+        font-family: "Ubuntu", sans-serif;
+        color: #535353;
+        font-size: 16px;
+        margin: 0 5px 0 0;
+    }
+
+    .reviewsList > .title {
+        font-family: "Ubuntu", sans-serif;
+        color: #535353;
+        margin: 24px 32px;
+        font-size: 16px;
+    }
+
+    .reviewsList > .list {
+        padding: 0 18px;
         border-top: 1px solid #efefef;
         overflow-y: scroll;
         height: 400px;
