[UR-34] Added form for FAQ

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -41,10 +41,14 @@
         z-index: 5;
         box-sizing: border-box;
         overflow: hidden;
-        border-radius: 10px;
+    }
+
+    .input:first-child {
+        border-radius: 10px 0 0 10px;
     }
 
     .input:last-child {
+        border-radius: 0 10px 10px 0;
         border-right: none;
     }
 
