--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -13,7 +13,7 @@
         display: inline-block;
         float: right;
         height: 25px;
-        margin: 4px;
+        margin: -2px 4px;
         cursor: pointer;
         font-family: "Quicksand", sans-serif;
         font-size: 28px;
