--- a/src/components/style.css
+++ b/src/components/style.css
@@ -174,6 +174,9 @@
         font-style: normal;
     }
 
+    .offer > .wrapper.badOffer > div:nth-child(2) > span:last-child {
+        color: #535353;
+    }
     .offer > .wrapper > div:nth-child(2) > span:last-child {
         font-family: "Ubuntu", sans-serif;
         color: rgba(26, 171, 72, 1);
@@ -198,7 +201,9 @@
         background-color: rgb(249, 249, 249);
         border-bottom: 1px solid rgb(228, 228, 228);
     }
-
+    .offer > .wrapper.badOffer > .button {
+        background: #818181;
+    }
     .wrapper > .button {
         width: 100%;
         height: 32px;
@@ -465,7 +470,9 @@
         font-size: 15px;
         font-style: normal;
     }
-
+    .offer > .wrapper.badOffer > div:nth-child(2) > span:last-child {
+        color: #535353;
+    }
     .offer > .wrapper > div:nth-child(2) > span:last-child {
         font-family: "Ubuntu", sans-serif;
         color: rgba(26, 171, 72, 1);
@@ -490,7 +497,9 @@
         background-color: rgb(249, 249, 249);
         border-bottom: 1px solid rgb(228, 228, 228);
     }
-
+    .offer > .wrapper.badOffer > .button {
+        background: #949494;
+    }
     .wrapper > .button {
         width: 100%;
         height: 28px;
