--- a/src/Footer/style.css
+++ b/src/Footer/style.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 900px) {
     footer {
         width: calc(100% - var(--offset)/9 * 2);
-        margin: 24px auto;
+        margin: 24px auto 64px auto;
         font-size: 14px;
         color: #9f9f9f;
     }
