--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -1,19 +1,22 @@
 @media screen and (min-width: 901px) {
     header {
-        display: block;
+        display: flex;
         width: 100%;
         z-index: 6;
         box-shadow: 0 0 10px -2px grey;
         box-sizing: border-box;
         height: 80px;
         padding: 18px var(--offset);
+        flex-direction: row;
+    }
+
+    header > div {
+        flex: 5;
     }
 
     header > .changeLang {
         display: inline-block;
-        float: right;
-        height: 25px;
-        margin: -2px 4px;
+        flex: 1;
         cursor: pointer;
         font-family: "Quicksand", sans-serif;
         font-size: 28px;
@@ -28,7 +31,11 @@
                                          supported by Chrome, Edge, Opera and Firefox */
     }
 
-    header > .changeLang > .selected {
+    header > .changeLang > div {
+        float: right;
+    }
+
+    header > .changeLang .selected {
         color: #1AAB48;
         font-size: 30px;
     }
@@ -36,7 +43,32 @@
     header > .changeLang > img {
         height: 100%;
     }
+    header > a {
+        flex: 1;
+    }
+    .menu {
+        display: flex;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .menu > span {
+        font-family: "OpenSans", sans-serif;
+        font-size: 20px;
+        color: #535353;
+        cursor: pointer;
+        margin: 8px;
+    }
+
+    .menu > span.active {
+        color: white;
+        font-weight: bold;
+        background: rgb(0, 172, 255);
+        border-radius: 4px;
+        box-shadow: 0 0 10px -4px rgb(43, 91, 112);
+        padding: 4px;
+    }
 }
 @media screen and (max-width: 900px) {
     header {
@@ -53,7 +85,9 @@
         position: absolute;
         right: 6px;
         top: 8px;
-        display: inline-block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 40px;
         cursor: pointer;
         font-family: "Quicksand", sans-serif;
@@ -69,7 +103,7 @@
                                          supported by Chrome, Edge, Opera and Firefox */
     }
 
-    header > .changeLang > .selected {
+    header > .changeLang .selected {
         color: #1AAB48;
         font-size: 26px;
     }
@@ -79,5 +113,32 @@
         width: 180px;
         margin: 8px;
     }
+    .menu {
+        position: fixed;
+        display: flex;
+        background: white;
+        width: 100%;
+        bottom: 0;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px -2px grey;
+    }
 
+    .menu > span {
+        font-family: "OpenSans", sans-serif;
+        font-size: 20px;
+        color: #535353;
+        cursor: pointer;
+        margin: 8px;
+    }
+
+    .menu > span.active {
+        color: white;
+        font-weight: bold;
+        background: rgb(0, 172, 255);
+        border-radius: 4px;
+        box-shadow: 0 0 10px -4px rgb(43, 91, 112);
+        padding: 4px;
+    }
 }
