Added offer edit form

--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -44,12 +44,12 @@
         height: 100%;
     }
     header > a {
-        flex: 1;
+        flex: 2;
     }
     .menu {
         display: flex;
         margin: 0;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
     }
 
