--- a/src/components/style.css
+++ b/src/components/style.css
@@ -91,8 +91,8 @@
 
     .ads > p {
         color: white;
-        margin-left: 0;
-        margin-top: 24px;
+        margin-left: 13px;
+        margin-top: 20px;
     }
 
     .filter {
