--- a/src/FAQ/style.css
+++ b/src/FAQ/style.css
@@ -44,7 +44,7 @@
     }
 
     .FAQ > .body > .questions > .question.active {
-        border-left: 4px solid rgba(26, 171, 72, 1);
+        border-left: 4px solid var(--green);
         background: #f5f5f5;
     }
 
@@ -110,7 +110,7 @@
     }
 
     .FAQ > .body > .questions > .question.active {
-        border-left: 4px solid rgba(26, 171, 72, 1);
+        border-left: 4px solid var(--green);
         background: #f5f5f5;
     }
 
